fixed alignment on toggle links

--- a/coreapp/public/stylesheets/widget.css
+++ b/coreapp/public/stylesheets/widget.css
@@ -495,7 +495,8 @@ version: 3.0.0pr2
 
 #outspokes #topbar select#comments_filter {
   margin-left: 10px;
-  height: 20px;
+  position: relative;
+  top: -4px;
 }
 
 #outspokes #topbar #open_admin_panel {
@@ -577,6 +578,11 @@ version: 3.0.0pr2
     color: #333;
     padding-bottom: 7px;
   }
+
+#outspokes #topbarLeft ul.navigation li.outspokes-current span {
+  position: relative;
+  top: -6px;
+}
 
 /* END TOPBAR */
 
